# Agentic-Core-Observability

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.agentcore/: config.yaml
cdk/: agent_stack.py  app.py  cdk.json
docs/: ARCHITECTURE.md
src/: app.py  requirements.txt
src/agents/: __init__.py  supervisor.py  tools.py
tests/: __init__.py  test_connection.py  test_hallucination_loop.py
